--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 {{$NEXT}}
+   - add functions option, with doc
+   - minor doc fixes
 
 1.56  2021-08-18 23:40:22 CEST
    - release after 35 PASSes on CPAN Testers (thanks!)
