--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+   - support partial matching in crumble
 
 1.58  2023-02-05 14:55:55 CET
    - release after 412 PASSes on CPAN Testers (thanks!)
