--- a/lib/Template/Perlish.pod
+++ b/lib/Template/Perlish.pod
@@ -6,7 +6,7 @@ Template::Perlish - Yet Another Templating system for Perl
 
 =head1 VERSION
 
-This document describes Template::Perlish version 1.58.
+This document describes Template::Perlish version 1.59.
 
 
 =head1 SYNOPSIS
@@ -921,7 +921,9 @@ the same path will provide the right value:
 
 =item B<< crumble >>
 
-   my $array_ref = crumble($path);
+   my $array_ref = crumble($path);        # OR
+   my $array_ref = crumble($path, 1);     # OR, BETTER
+   my ($aref, $pos) = crumble($path, 1);
 
 split the input C<$path> into I<crumbs> that should be followed into
 some data structure (you can use L</traverse> to do the actual
@@ -929,6 +931,17 @@ traversal). Returns a reference to an array with the crumbs, in order.
 Returns C<undef> if the provided C<$path> cannot be broken down. See
 L</Templates> for the rules of breaking a path into pieces, this is the
 actual function used to do that.
+
+As of version 1.60, this function also accepts a second optional boolean
+argument for supporting I<partial matches>. If false (default), the legacy
+behaviour is kept, and the provided input C<$path> must match in its
+entirety or the splitting will fail. If true, the extraction of crumbs will
+begin at the first character of C<$path> but be allowed to stop in the
+middle; this e.g. allows parsing strings like C<foo.bar:baz>, with crumbs
+resulting in C<< ['foo', 'bar'] >>. The first variant will only return the
+crumbs in an array reference; the second variant will also point out the
+position where the match stopped, so that residual stuff can be extracted
+(in the example, the C<:baz> part).
 
 =item B<< traverse >>
 
