Add support for traverse's "missing"

--- a/lib/Template/Perlish.pod
+++ b/lib/Template/Perlish.pod
@@ -988,10 +988,11 @@ parts.
 
 In particular, you will want to pass a reference to a hash or array if
 you want to just I<read> from C<data>. In this case, the first missing
-crumb will make the function return immediately an empty string value;
-moreover, if all crumbs are successfully found, the value will be
-returned. This is what is actually used by the functions described in
-L</Variables Accessors>.
+crumb will make the function return immediately an empty string value
+(or, as of version 1.62, whatever is passed with option C<missing>, if
+anything); moreover, if all crumbs are successfully found, the value
+will be returned. This is what is actually used by the functions
+described in L</Variables Accessors>.
 
 If you pass a reference to a scalar or to another reference instead, you
 will get back a reference to a value. In this case, any missing parts
@@ -1016,7 +1017,8 @@ Of course variable values might come from the command line or some other
 source in the real world!
 
 When something goes wrong in the traversal, C<undef> is returned if
-auto-vivification is enabled, an empty string is returned otherwise.
+auto-vivification is enabled, an empty string (or, as of version 1.62,
+what is passed as option C<missing> if present) is returned otherwise.
 
 If C<$path> is a reference to an array, its components can be plain
 scalars or references themselves. When they are plain scalars, they are
@@ -1158,6 +1160,22 @@ cases:
         what -> 'hey'       # method wins over key
         foo  -> ''          # key is ignored
         urgh -> 'gaah!'     # method is called
+
+Since version 1.62, additional option C<missing> allows setting the
+return value when the target key is not found. This applies only when
+auto-vivification is not active. When this key is missing, the return
+value is by default set to the empty string, preserving
+backwards-compatibility.
+
+To tell an undefined value from a really missing key, it's possible to
+pass a marker reference and check the return value against it with
+C<Scalar::Util::refaddr>:
+
+   use Scalar::Util 'refaddr';
+   my $marker = [];
+   my $value = traverse($data, $path, { missing => $marker });
+   say 'the value is missing'
+      if ref($value) && refaddr($value) == refaddr($marker);
 
 =back
 
