--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 {{$NEXT}}
+   - Add support for passing an additional option to traverse(), for
+     setting the return value when missing a key.
 
 1.60  2023-03-10 21:57:10 CET
    - release after 66 PASSes on CPAN Testers (thanks!)
