--- a/lib/Template/Perlish.pod
+++ b/lib/Template/Perlish.pod
@@ -6,7 +6,7 @@ Template::Perlish - Yet Another Templating system for Perl
 
 =head1 VERSION
 
-This document describes Template::Perlish version 1.62.
+This document describes Template::Perlish version 1.64.
 
 
 =head1 SYNOPSIS
@@ -1176,6 +1176,12 @@ C<Scalar::Util::refaddr>:
    my $value = traverse($data, $path, { missing => $marker });
    say 'the value is missing'
       if ref($value) && refaddr($value) == refaddr($marker);
+
+By default, landing on an (existent) undefined value makes C<traverse>
+return an empty string; this is to simplify usage in templates and is in
+line with the default value for C<missing>. As of version 1.64 it's
+possible to pass option C<undef> to set a different value, defaulting to
+the empty string for backwards compatibility;
 
 =back
 
